--- a/addPost.html
+++ b/addPost.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Add Post</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
@@ -45,25 +45,39 @@
 <!-- Navbar End -->
 
 <div class="container mt-5">
-  <h2>Login</h2>
+  <h2>Add a New Post</h2>
 
-  <form id="loginForm">
+  <form id="postForm">
     <div class="mb-3">
-      <label for="loginEmail" class="form-label">Email</label>
-      <input type="email" id="loginEmail" class="form-control" required>
+      <label for="postTitle" class="form-label">Title</label>
+      <input type="text" id="postTitle" class="form-control" required>
     </div>
 
     <div class="mb-3">
-      <label for="loginPassword" class="form-label">Password</label>
-      <input type="password" id="loginPassword" class="form-control" required>
+      <label for="postContent" class="form-label">Content</label>
+      <textarea id="postContent" class="form-control" rows="3" required></textarea>
     </div>
 
-    <button type="submit" class="btn btn-primary">Login</button>
-    <p class="mt-3">Don't have an account? <a href="signup.html">Sign Up here</a></p>
+    <div class="mb-3">
+      <label for="postCategory" class="form-label">Category</label>
+      <input type="text" id="postCategory" class="form-control" placeholder="e.g. Fashion">
+    </div>
+
+    <div class="mb-3">
+      <label for="postImage" class="form-label">Image (optional)</label>
+      <input type="file" id="postImage" class="form-control" accept="image/*">
+    </div>
+
+    <button type="submit" class="btn btn-primary">Add Post</button>
   </form>
+
+  <hr>
+
+  <h3>All Posts</h3>
+  <div id="postsContainer" class="row mt-4"></div>
 </div>
 
-<script type="module" src="./authen.js"></script>
+<script type="module" src="./posts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
