--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Home / Feed</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
 </head>
 <body>
-    <!-- Navbar Start -->
+  <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
   <div class="container">
     <!-- Logo / Site Name -->
@@ -45,25 +45,19 @@
 <!-- Navbar End -->
 
 <div class="container mt-5">
-  <h2>Login</h2>
+  <h2>Posts Feed</h2>
 
-  <form id="loginForm">
-    <div class="mb-3">
-      <label for="loginEmail" class="form-label">Email</label>
-      <input type="email" id="loginEmail" class="form-control" required>
-    </div>
+  <div class="mb-3">
+    <label for="filterCategory" class="form-label">Filter by Category</label>
+    <input type="text" id="filterCategory" class="form-control" placeholder="Type category to filter">
+  </div>
 
-    <div class="mb-3">
-      <label for="loginPassword" class="form-label">Password</label>
-      <input type="password" id="loginPassword" class="form-control" required>
-    </div>
+  <a href="addPost.html" class="btn btn-success mb-4">Add New Post</a>
 
-    <button type="submit" class="btn btn-primary">Login</button>
-    <p class="mt-3">Don't have an account? <a href="signup.html">Sign Up here</a></p>
-  </form>
+  <div id="postsContainer" class="row"></div>
 </div>
 
-<script type="module" src="./authen.js"></script>
+<script type="module" src="./home.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
