--- a/postDetail.html
+++ b/postDetail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Post Details</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
 
@@ -45,25 +45,10 @@
 <!-- Navbar End -->
 
 <div class="container mt-5">
-  <h2>Login</h2>
-
-  <form id="loginForm">
-    <div class="mb-3">
-      <label for="loginEmail" class="form-label">Email</label>
-      <input type="email" id="loginEmail" class="form-control" required>
-    </div>
-
-    <div class="mb-3">
-      <label for="loginPassword" class="form-label">Password</label>
-      <input type="password" id="loginPassword" class="form-control" required>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Login</button>
-    <p class="mt-3">Don't have an account? <a href="signup.html">Sign Up here</a></p>
-  </form>
+  <div id="postDetailContainer"></div>
 </div>
 
-<script type="module" src="./authen.js"></script>
+<script type="module" src="./postDetail.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
